add socket.io
